--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             <div class="h4 mt-0 title">About</div>
             <p>Hello, World! My name is Ami Chauhan, and I'd like to greet you on my website with a warm welcome.<br><br>
 
-              I'm working on a master's degree in computer science at the State University of New York at Binghamton. Some of my hobbies include chess, watching science fiction shows, and playing the ukulele in my spare time.
+              I have a master's degree in computer science from the State University of New York at Binghamton. Some of my hobbies include chess, watching science fiction shows, and playing the ukulele.
               <br><br>
-              If you have a project for me, please don't hesitate to <a href="#contact">contact me</a>. I'm always keen to learn new things and enjoy working on a range of projects, so please don't hesitate to contact me.
+              If you have a project for me, please don't hesitate to <a href="#contact">contact me</a>. 
           </div>
         </div>
           </div>
@@ -273,6 +273,44 @@
 <div class="section" id="experience">
   <div class="container cc-experience">
     <div class="h4 text-center mb-4 title">Work Experience</div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>Aug 2023 - July 2024</p>
+            <div class="h5">New York State Office of Information Technology</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Software Developer </div>
+            <p><ul><li>Java Development in Spring framework and Custom Frameworks designed for NYS Tax applications</li>
+              <li>Developed, built, and tested Java EE applications with experience in JDBC, JSP, and XML</li>
+              <li>Utilize DB2,Git,WebSphere Application Server and other IBM development tools</li>
+              <li>Write queries in SQL to integrate with java applications</li></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>Aug 2021 - May 2023</p>
+            <div class="h5">Girls Who Code</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Teaching Instructor Volunteer</div>
+            <p><ul><li>Organizing coding camp events and Teaching Over 50 Middle School Students Python development Class</li>
+              <li>Plan and implement instruction that encompasses learning strategies or activities centered on STEM and programming specifics</li>
+              <li>Encourage students to participate in coding competitions or elective courses when offered at the higher grade school levels</li>
+              <li>Create Powerpoint Presentations to help students learn basic programming concepts</li></p>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
