--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                 <div class="col-md-6">
                   <div class="card-body">
                     <p class="mb-0"><strong>Address </strong></p>
-                    <p class="pb-2">Binghamton, New York</p>
+                    <p class="pb-2">Remote, New York</p>
                     <p class="mb-0"><strong>Email</strong></p>
                     <p>amichauhan95@gmail.com</p>
                   </div>
